--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-select": "^2.2.5",
     "@tailwindcss/vite": "^4.1.11",
     "class-variance-authority": "^0.7.1",
